# oxpulse-chat

./: .dockerignore  .release-please-manifest.json  CONTRIBUTING.md  Dockerfile  Makefile  README.md  release-please-config.json
.github/workflows/: ci.yml  partner-edge-release.yml  release-please.yml  turn-node-release.yml
assets/room/: index.html  manifest.json  offline.html  sw.js
config/partners/: README.md  oxpulse.json  piter.json  rvpn.json  template.json
crates/partner-cli/: Cargo.toml
crates/partner-cli/src/: commands.rs  main.rs
crates/server/: CHANGELOG.md  Cargo.toml
crates/server/migrations/: 001_analytics.sql  20260417_partner_tokens.sql  20260418_partner_nodes.sql  20260419_visitor_id.sql
crates/server/src/: analytics.rs  branding.rs  branding_handler.rs  branding_tests.rs  config.rs  lib.rs  main.rs  metrics.rs  migrate.rs  rate_limit.rs  router.rs  turn_pool.rs  turn_probe.rs  turn_probe_loop.rs  visitor.rs
crates/server/src/branding/: handler.rs  mod.rs  render.rs  tests.rs
crates/server/src/domains/: chain.rs  mod.rs
crates/server/src/partner_registry/: creds.rs  error.rs  handler.rs  mod.rs  rate_limit.rs  register.rs
crates/server/tests/: analytics_integration.rs  branding_endpoint.rs  call_signaling.rs  domains_endpoint.rs  e2e_live.rs  http_integration.rs  metrics_endpoint.rs  partner_registration.rs  partner_registration_reject.rs  partner_registry_nodes.rs  rate_limit_integration.rs  turn_credentials.rs
crates/server/tests/common/: mod.rs  partner.rs
crates/signaling/: Cargo.toml
crates/signaling/src/: handler.rs  lib.rs  metrics.rs  rate_limit.rs  room_cleanup.rs  rooms.rs  types.rs
crates/turn/: Cargo.toml
deploy/partner-edge/: Caddyfile.tpl  DECISION.md  README.md  bootstrap.sh  cloud-init.example.yaml  coturn.conf.tpl  docker-compose.yml.tpl  healthcheck.sh  hydrate.sh  install.sh  upgrade.sh  xray-client.json.tpl
deploy/turn-node/: .gitignore  CHANGELOG.md  README.md  healthcheck.sh  install.sh  render-conf.sh  upgrade.sh
docs/: MARKETING.md  ROADMAP.md
docs/design/: turn-pool.md
docs/infra/: README.md  caddyfile-krolik-server.snapshot.conf
docs/partners/: ARCHITECTURE.md  onboarding.md
docs/postmortems/: 2026-04-03-analytics-bind-drop.md  2026-04-10-router-404-telegram.md  _template.md
web/: package-lock.json  package.json  svelte.config.js
(+263 files in other folders)
