[package]
name = "partner-cli"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Admin CLI for OxPulse partner edge-node tokens"

[[bin]]
name = "partner-cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"
anyhow = "1"
