[package]
name = "oxpulse-chat"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "OxPulse Chat — encrypted video calls"

[lib]
name = "oxpulse_chat"
path = "src/lib.rs"

[[bin]]
name = "oxpulse-chat"
path = "src/main.rs"

[dependencies]
oxpulse-signaling = { path = "../signaling" }
oxpulse-turn = { path = "../turn" }
axum = { version = "0.8", features = ["ws"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "compression-gzip", "compression-br", "set-header"] }
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
getrandom = "0.2"
include_dir = "0.7"
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
axum-test = "20"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = "3"
tokio-tungstenite = "0.26"
